# orienti-api

./: .env.example  .flake8  .gitignore  README.md  manage.py  openapi.yaml  pyproject.toml
.github/workflows/: docs.yml
apps/api/: decorators.py  urls.py
apps/api/forms/: tokens.py
apps/api/serializers/: tokens.py  users.py
apps/api/views/: base.py  tokens.py
apps/core/: auth.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: base.py  team.py  user.py
docs/: openapi.yaml  Špecifikácia projektu.docx
docs/open_api/: swagger.yaml
orienti_api/: asgi.py  wsgi.py
orienti_api/settings/: base.py  production.py
