[tool.poetry]
name = "orienti_api"
version = "0.1.0"
description = "API for Orienti.app"
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.0"
django_api_forms = "^0"
python-dotenv = "^0"
argon2-cffi = "^20.1.0"
sentry-sdk = "^1"
psycopg2-binary = "^2.8.6"
porcupine-python = "^0"
django-imap-backend = "^0"
requests = "^2.24.0"
pymongo = "^3.12.0"

[tool.poetry.dev-dependencies]
fabric = "^2.6.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
